--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name:     Kleo-ls
+Theme Name:     kleo-ls
 Theme URI:      
 Description:    Kleo child theme.
-Author:         Me
-Author URI:     
+Author:         Daniel Lewis & Bamboo Creative NZ
+Author URI:     makebamboo.com
 Template:       kleo
 Version:        0.1.0
 */
