--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
 /*
-Theme Name:     kleo-ls
-Theme URI:      
-Description:    Kleo child theme.
+Theme Name:     Kleo Child
+Theme URI:
+Description:    Child theme for Kleo
 Author:         Daniel Lewis & Bamboo Creative NZ
 Author URI:     makebamboo.com
 Template:       kleo
-Version:        0.1.0
+Tags:  one-column, two-columns, right-sidebar, fluid-layout, custom-menu, featured-images, post-formats, sticky-post, translation-ready
+License: GNU General Public License
+License URI: license.txt
 */
 
 .kleo-main-header{
