--- a/style.css
+++ b/style.css
@@ -50,13 +50,16 @@ License URI: license.txt
   content: "\2015";
 }
 
-.paginated-comments-links {
+.comments-navigation {
   display: flex;
   justify-content: center;
 }
 
+.paginated-comments-links {
+  width: 4em;
+}
+
 .page-numbers {
-  width: 20em;
-  display: flex;
+  display: inline-flex;
   justify-content: space-between;
 }
