--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ License URI: license.txt
   font-size: 20px;
   color: #4E4E4E
 }
-#main body {
+#main p {
   font-family: ff-tisa-sans-web-pro, sans-serif;
   font-style: inherit;
   font-size: 14px;
