--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ License URI: license.txt
   text-align:right;
 }
 .ls-quote blockquote cite {
-  font-family: open-sans, sans-serif;
+  font-family: "Open Sans", sans-serif;
   font-size: 14px;
   color: #4E4E4E;
   text-transform: unset;
