--- a/style.css
+++ b/style.css
@@ -88,9 +88,9 @@ License URI: license.txt
 }
 #main h2 {
   font-family: ff-tisa-sans-web-pro, sans-serif;
-  font-style: italic;
+  font-weight: 400;
   font-size: 30px;
-  color: #FFBE55
+  color: #FFBE55!important;
 }
 #main h3 {
   font-family: ff-tisa-sans-web-pro, sans-serif;
