--- a/style.css
+++ b/style.css
@@ -89,8 +89,8 @@ License URI: license.txt
 #main h2 {
   font-family: ff-tisa-sans-web-pro, sans-serif;
   font-weight: 400;
-  font-size: 30px;
-  color: #FFBE55!important;
+  font-size: 26px;
+  color: #ff9d00!important;
 }
 #main h3 {
   font-family: ff-tisa-sans-web-pro, sans-serif;
