--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ License: GNU General Public License
 License URI: license.txt
 */
 
+.logo {
+  height: 50%;
+}
+
 #comments .hr-title abbr {
   top: -20px;
 }
