--- a/style.css
+++ b/style.css
@@ -133,3 +133,9 @@ License URI: license.txt
   font-size: 16px;
   color: #4E4E4E
 }
+@media (min-width: 991px) {
+  #header .navbar-nav > li > a {
+    font-size: 16px;
+    font-weight: 700;
+  }
+}
