--- a/style.css
+++ b/style.css
@@ -140,6 +140,8 @@ License URI: license.txt
   }
 }
 
+/* Overide buddy press and regular form fields */
+
 #main .main-color .form-control, #main #buddypress input[type=submit], #main #buddypress #friend-list .friend-inner-list, #main #buddypress #member-list .member-inner-list, #main #buddypress #groups-list .group-inner-list, #main #buddypress .activity-list .activity-avatar, #main .profile-cover-action a.button:hover, #main .profile-cover-action a.button:before, #main div#item-header .toggle-header .bp-toggle-less:hover, #main div#item-header .toggle-header .bp-toggle-more:hover, #main div#item-header .toggle-header .bp-toggle-less:before, #main div#item-header .toggle-header .bp-toggle-more:before, #main #buddypress .standard-form textarea, #main #buddypress .standard-form input[type=text], #main #buddypress .standard-form input[type=color], #main #buddypress .standard-form input[type=date], #main #buddypress .standard-form input[type=datetime], #main #buddypress .standard-form input[type=datetime-local], #main #buddypress .standard-form input[type=email], #main #buddypress .standard-form input[type=month], #main #buddypress .standard-form input[type=number], #main #buddypress .standard-form input[type=range], #main #buddypress .standard-form input[type=search], #main #buddypress .standard-form input[type=tel], #main #buddypress .standard-form input[type=time], #main #buddypress .standard-form input[type=url], #main #buddypress .standard-form input[type=week], #main #buddypress .standard-form select, #main #buddypress .standard-form input[type=password], #main #rtMedia-upload-button, #main #buddypress div.rtmedia-single-container .rtmedia-single-meta button, #main .rtmedia-container .rtmedia-editor-main dl.tabs dd > a, #main .rtmedia-activity-container .rtmedia-editor-main dl.tabs dd > a, #main #buddypress div.rtmedia-activity-container .rtmedia-editor-main dl.tabs dd > a {
   background-color: #f7f7f7;
 }
@@ -161,4 +163,13 @@ License URI: license.txt
   #main #comments-list ul.children {
     margin-left: 135px;
   }
+}
+
+/* Overide Buddypress favourite icon location */
+
+#main #buddypress a.button.fav, #main #buddypress a.button.unfav {
+  position: absolute;
+  top: 58px;
+  left: -67px;
+  z-index: 100;
 }
