--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ li {
 .ethosContainer {
   display: flex;
 }
-.ethosMessage .ethosButton {
+.ethosMessage, .ethosButton {
   width: 50%;
 }
 .ethosMessage > h2 {
