--- a/style.css
+++ b/style.css
@@ -206,3 +206,15 @@ li {
   justify-content: center;
   align-items: center;
 }
+.ethosButton .f1-button {
+  border-radius: 4px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 18px;
+  padding: 12px 24px;
+  text-decoration: none;
+  text-shadow: none;
+}
