--- a/style.css
+++ b/style.css
@@ -206,7 +206,7 @@ li {
   justify-content: center;
   align-items: center;
 }
-.ethosButton .f1-button {
+.ethosButton .fl-button {
   border-radius: 4px;
   -moz-border-radius: 4px;
   -webkit-border-radius: 4px;
