--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ li {
 }
 
 /* Overide Buddypress favourite icon location */
-
+/*
 #main #buddypress a.button.fav, #main #buddypress a.button.unfav {
   position: absolute;
   top: -4px;
@@ -199,6 +199,7 @@ li {
 #main #comments-nav-above {
   display: none;
 }
+*/
 
 /* Style the embedded ethos message at the top of the members page */
 #main .ethosMessage h2 {
