--- a/style.css
+++ b/style.css
@@ -10,6 +10,16 @@ License: GNU General Public License
 License URI: license.txt
 */
 
+.editor-toolbar {
+    display: none;
+	visibility: hidden;
+}
+	
+	.editor-statusbar {
+    display: none;
+    visibility: hidden;
+}
+
 #header .logo img {
   height: 50%;
 }
