--- a/style.css
+++ b/style.css
@@ -10,6 +10,11 @@ License: GNU General Public License
 License URI: license.txt
 */
 
+
+.wp-block-spacer {
+    height: 0px !important;
+}
+
 .editor-toolbar {
     display: none;
 	visibility: hidden;
