--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ License: GNU General Public License
 License URI: license.txt
 */
 
+.edit-link {
+    display: none;
+}
 
 .dwqa-question-item.dwqa-status-closed {
     margin-top: 0px;
