--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ License: GNU General Public License
 License URI: license.txt
 */
 
+#activity-stream iframe {
+    width: 50%;
+    height: 400px;
+    margin-left: 25%;
+}
+
 .fluid-width-video-wrapper {
     padding-top: 28% !important;
     width: 50%;
