--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@ padding-left: 5px;
     margin-left: 25%;
 }
 
-.fluid-width-video-wrapper {
+.activity .fluid-width-video-wrapper {
     width: 50%;
     height: 50%;
     margin: 0 auto !important;
+	padding-top: 0% !important;
 }
 
 
