--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ License: GNU General Public License
 License URI: license.txt
 */
 
+.mfp-hide {
+    display: none;
+}
+
 .mfp-bg {
     top: 0;
     left: 0;
