--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ padding-left: 5px;
     margin-top: -161px;
     font-size: 12px;
     padding-left:40px;
+}
 
 .dwqa-question-filter {
     margin-bottom: 20px;
