--- a/style.css
+++ b/style.css
@@ -158,6 +158,11 @@ padding-left: 5px;
     float: right;
 }
 
+.page-id-4242 .dwqa-question-filter {
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+
 .dwqa-breadcrumbs {
     margin-top: -165px;
     font-size: 12px;
