--- a/style.css
+++ b/style.css
@@ -164,9 +164,11 @@ padding-left: 5px;
 }
 
 .dwqa-breadcrumbs {
-    margin-top: -165px;
+    margin-top: -100px;
     font-size: 12px;
     padding-left:40px;
+	margin-bottom: 100px;
+    margin-left: -130px !important;
 }
 
 .dwqa-question-filter {
