--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ padding-left: 5px;
 .dwqa-breadcrumbs {
     margin-top: -100px;
     font-size: 12px;
-    padding-left:40px;
+    padding-left:0px !important;
 	margin-bottom: 100px;
     margin-left: -130px !important;
 }
