adjust line height

--- a/style.css
+++ b/style.css
@@ -358,6 +358,7 @@ body.bp-user .ethosContainer {
 	font-style: italic;
 	font-size: 22px;
 	color: #161650;
+	line-height: 28px;
 }
 #main h2 {
 	font-family: ff-tisa-sans-web-pro, sans-serif;
